# 1brc

./: CMakeLists.txt  Main.cpp  bench_1brc.cpp  file_reader.cpp  file_reader.hpp  main.cpp
